--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "morgan": "^1.8.2",
-    "mysql2": "^1.3.6"
+    "mysql2": "^1.3.6",
+    "string-template": "^1.0.0",
+    "unirest": "^0.5.1"
   }
 }
